--- a/package.json
+++ b/package.json
@@ -54,11 +54,12 @@
   },
   "dependencies": {
     "babel-preset-env": "^1.6.1",
-    "bootstrap": "^4.0.0",
     "html-webpack-plugin": "^3.1.0",
+    "material-ui": "^0.20.0",
     "react": "^16.4.0-alpha.0911da3",
     "react-dom": "^16.4.0-alpha.0911da3",
     "react-redux": "^5.0.7",
+    "react-router-redux": "^4.0.8",
     "reactstrap": "^5.0.0-beta.3",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
