--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
     "react": "^16.4.0-alpha.0911da3",
     "react-dom": "^16.4.0-alpha.0911da3",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "reactstrap": "^5.0.0-beta.3",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "react-router": "latest"
   }
 }
