--- a/package.json
+++ b/package.json
@@ -27,43 +27,47 @@
   },
   "homepage": "https://github.com/LukashenkoEvgeniy/Friendslist#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-decorators": "^7.2.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.2.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.12.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.3",
     "extract-text-webpack-plugin": "^3.0.2",
-    "lodash": "^4.17.5",
-    "node-sass": "^4.8.3",
-    "prop-types": "^15.6.1",
-    "react-hot-loader": "^4.0.0",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1",
-    "webpack-merge": "^4.1.2"
-  },
-  "dependencies": {
-    "babel-preset-env": "^1.6.1",
-    "html-webpack-plugin": "^3.1.0",
-    "material-ui": "^0.20.0",
-    "react": "^16.4.0-alpha.0911da3",
-    "react-dom": "^16.4.0-alpha.0911da3",
-    "react-redux": "^5.0.7",
+    "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
+    "prop-types": "^15.6.2",
+    "react-hot-loader": "^4.6.3",
+    "react-redux": "^6.0.0",
     "react-router-3": "^3.2.2",
     "react-router-redux": "^4.0.8",
-    "reactstrap": "^5.0.0-beta.3",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1",
+    "worker-loader": "^2.0.0"
+  },
+  "dependencies": {
+    "material-ui": "^0.20.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "reactstrap": "^7.0.2"
   }
 }
